--- a/changelog/unreleased/kong/feat-emmy-debugger.yml
+++ b/changelog/unreleased/kong/feat-emmy-debugger.yml
@@ -1,3 +1,4 @@
 message: |
-  Added support for debugging with EmmyLuaDebugger
+  Added support for debugging with EmmyLuaDebugger.  This feature is a
+  tech preview and not officially supported by Kong Inc. for now.
 type: feature
