chore(workflows): label-schema to overwrite slack message with pr title and footer as pr link (#12993)

--- a/.github/workflows/label-schema.yml
+++ b/.github/workflows/label-schema.yml
@@ -12,4 +12,5 @@ jobs:
       continue-on-error: true
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_SCHEMA_CHANGE }}
-        SLACK_FOOTER: ${{ github.event.pull_request.title }}
+        SLACK_MESSAGE: ${{ github.event.pull_request.title }}
+        SLACK_FOOTER: "<${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.pull_request.number }}>"
