--- a/spec/kong_tests.conf
+++ b/spec/kong_tests.conf
@@ -50,3 +50,5 @@ vaults = bundled
 pg_password = foo\#bar# this is a comment that should be stripped
 
 wasm_filters_path = ./spec/fixtures/proxy_wasm_filters/build
+
+concurrency_timeout = 60000
