--- a/changelog/unreleased/kong/fix-aws-lambda-gateway-compat-version-field.yml
+++ b/changelog/unreleased/kong/fix-aws-lambda-gateway-compat-version-field.yml
@@ -1,3 +1,3 @@
-message: "**AWS-Lambda**: fixed an issue that the `version` field is not set in the request payload when `awsgateway_compatible` is enabled"
+message: "**AWS-Lambda**: Fixed an issue that the `version` field is not set in the request payload when `awsgateway_compatible` is enabled."
 type: bugfix
 scope: Plugin
