--- a/changelog/unreleased/kong/fix-request-transformer-uri-replace.yml
+++ b/changelog/unreleased/kong/fix-request-transformer-uri-replace.yml
@@ -1,4 +1,4 @@
 message: |
-  Fixed an issue where the URI captures are unavailable when an optional group is absent.
+  Fixed an issue where the URI captures are unavailable when the first capture group is absent.
 type: bugfix
 scope: Core
