--- a/changelog/unreleased/kong/fix-dns-ignore-records-with-non-matching-types.yml
+++ b/changelog/unreleased/kong/fix-dns-ignore-records-with-non-matching-types.yml
@@ -1,3 +1,3 @@
-message: "**DNS Client**: Ignore records with non-matching types when parsing answers."
+message: "**DNS Client**: Ignore records with RR types differs from that of the query when parsing answers."
 type: bugfix
 scope: Core
