--- a/changelog/unreleased/kong/add-ai-data-report.yml
+++ b/changelog/unreleased/kong/add-ai-data-report.yml
@@ -1,3 +1,3 @@
-"message": Add `events:ai:response_tokens`, `events:ai:prompt_tokens` and `events:ai:requests` to the anonymous report to start counting AI usage
+"message": Added `events:ai:response_tokens`, `events:ai:prompt_tokens` and `events:ai:requests` to the anonymous report to start counting AI usage
 "type": feature
 "scope": Core
