--- a/changelog/unreleased/kong/feat-wasm-general-shm-kv.yml
+++ b/changelog/unreleased/kong/feat-wasm-general-shm-kv.yml
@@ -1,5 +1,5 @@
 message: |
-   Introduce `nginx_wasm_main_shm_kv` configuration entry, which enables
+   Introduced `nginx_wasm_main_shm_kv` configuration parameter, which enables
    Wasm filters to use the Proxy-Wasm operations `get_shared_data` and
    `set_shared_data` without namespaced keys.
 type: feature
