--- a/changelog/unreleased/kong/fix-hybrid-dp-certificate-with-vault-not-refresh.yml
+++ b/changelog/unreleased/kong/fix-hybrid-dp-certificate-with-vault-not-refresh.yml
@@ -1,3 +1,3 @@
-message: Fixed a problem that in hybrid DP mode a certificate entity configured with vault reference may not get refreshed on time
+message: Fixed a problem on hybrid mode DPs, where a certificate entity configured with a vault reference may not get refreshed on time.
 type: bugfix
 scope: Core
