--- a/changelog/unreleased/kong/fix-jwt-plugin-check.yml
+++ b/changelog/unreleased/kong/fix-jwt-plugin-check.yml
@@ -1,3 +1,3 @@
-message: "**Jwt**: fix an issue where the plugin would fail when using invalid public keys for ES384 and ES512 algorithms."
+message: "**Jwt**: Fixed an issue where the plugin would fail when using invalid public keys for ES384 and ES512 algorithms."
 type: bugfix
 scope: Plugin
