--- a/changelog/unreleased/kong/fix-missing-router-section-of-request-debugging.yml
+++ b/changelog/unreleased/kong/fix-missing-router-section-of-request-debugging.yml
@@ -1,3 +1,3 @@
-message: Fix the missing router section for the output of the request-debugging
+message: Fixed the missing router section for the output of the request-debugging.
 type: bugfix
 scope: Core
