--- a/changelog/unreleased/kong/fix-upstream-status-unset.yml
+++ b/changelog/unreleased/kong/fix-upstream-status-unset.yml
@@ -1,3 +1,3 @@
-message: fix a bug that `X-Kong-Upstream-Status` will not appear in the response headers even if it is set in the `headers` parameter in the kong.conf when the response is hit and returned by proxy cache plugin.
+message: Fixed a bug that `X-Kong-Upstream-Status` didn't appear in the response headers even if it was set in the `headers` parameter in the `kong.conf` file when the response was hit and returned by the Proxy Cache plugin.
 scope: Core
 type: bugfix
