--- a/changelog/unreleased/kong/flavor-expressions-supports-traditional-fields.yml
+++ b/changelog/unreleased/kong/flavor-expressions-supports-traditional-fields.yml
@@ -1,7 +1,7 @@
 message: |
-  Supported fields `methods`, `hosts`, `paths`, `headers`,
-  `snis`, `sources`, `destinations` and `regex_priority`
-  for the `route` entity when the `router_flavor` is `expressions`.
+  The route entity now supports the following fields when the
+  `router_flavor` is `expressions`: `methods`, `hosts`, `paths`, `headers`,
+  `snis`, `sources`, `destinations`, and `regex_priority`.
   The meaning of these fields are consistent with the traditional route entity.
 type: feature
 scope: Core
