--- a/changelog/unreleased/kong/key_auth_www_authenticate.yml
+++ b/changelog/unreleased/kong/key_auth_www_authenticate.yml
@@ -1,3 +1,3 @@
-message: Add WWW-Authenticate headers to all 401 response in key auth plugin.
+message: Added WWW-Authenticate headers to all 401 responses in the Key Auth plugin.
 type: bugfix
 scope: Plugin
