--- a/changelog/unreleased/kong/log-serializer-receive-latency.yml
+++ b/changelog/unreleased/kong/log-serializer-receive-latency.yml
@@ -1,3 +1,3 @@
-message: 'Add `latencies.receive` property to log serializer'
+message: 'Added the `latencies.receive` property to the log serializer'
 type: feature
 scope: PDK
