--- a/changelog/3.7.0/kong/feat-ai-proxy-add-streaming.yml
+++ b/changelog/3.7.0/kong/feat-ai-proxy-add-streaming.yml
@@ -1,4 +1,4 @@
 message: |
-  **AI-Proxy**: add support for streaming event-by-event responses back to client on supported providers
+  **AI Proxy**: Added support for streaming event-by-event responses back to the client on supported providers.
 scope: Plugin
 type: feature
