--- a/changelog/3.7.0/kong/feat-hybrid-sync-mixed-route-policy.yml
+++ b/changelog/3.7.0/kong/feat-hybrid-sync-mixed-route-policy.yml
@@ -1,7 +1,7 @@
 message: |
-  When CP runs with `expressions` flavor:
-  - if mixed config is detected and a lower DP is attached to the CP, no config will be sent at all
-  - if the expression is invalid on CP, no config will be sent at all
-  - if the expression is invalid on lower DP, it will be sent to the DP and DP validation will catch this and communicate back to the CP (this could result in partial config application)
+  Improved config handling when the CP runs with the router set to the `expressions` flavor:
+    - If mixed config is detected and a lower DP is attached to the CP, no config will be sent at all
+    - If the expression is invalid on the CP, no config will be sent at all
+    - If the expression is invalid on a lower DP, it will be sent to the DP and DP validation will catch this and communicate back to the CP (this could result in partial config application)
 type: feature
 scope: Core
