--- a/changelog/3.7.0/kong/fix-cjson-t-end.yml
+++ b/changelog/3.7.0/kong/fix-cjson-t-end.yml
@@ -1,3 +1,3 @@
 message: |
-  Improve the robustness of lua-cjson when handling unexpected input. 
+  Improved the robustness of lua-cjson when handling unexpected input.
 type: dependency
