--- a/changelog/3.7.0/kong/fix-file-permission-of-logrotate.yml
+++ b/changelog/3.7.0/kong/fix-file-permission-of-logrotate.yml
@@ -1,3 +1,3 @@
-message: update file permission of kong.logrotate to 644
+message: Updated the file permission of `kong.logrotate` to 644.
 type: bugfix
 scope: Core
