--- a/changelog/3.7.0/kong/fix-mlcache-renew-lock-leaks.yml
+++ b/changelog/3.7.0/kong/fix-mlcache-renew-lock-leaks.yml
@@ -1,4 +1,4 @@
 message: |
-  Fixed an issue that leaking locks in the internal caching logic
+  Fixed an issue in the internal caching logic where mutexes could get never unlocked.
 type: bugfix
 scope: Core
