--- a/changelog/3.7.0/kong/fix-router-rebuing-flag.yml
+++ b/changelog/3.7.0/kong/fix-router-rebuing-flag.yml
@@ -1,5 +1,5 @@
 message: |
-  Fixed an issue where router may not work correctly
-  when the routes configuration changed.
+  Fixed an issue where the router didn't work correctly
+  when the route's configuration changed.
 type: bugfix
 scope: Core
