--- a/changelog/3.7.0/kong/fix-vault-init-worker.yml
+++ b/changelog/3.7.0/kong/fix-vault-init-worker.yml
@@ -1,3 +1,3 @@
-message: fix vault initialization by postponing vault reference resolving on init_worker
+message: Fixed vault initialization by postponing vault reference resolving on init_worker
 type: bugfix
 scope: Core
