--- a/changelog/3.7.0/kong/otel-increase-queue-max-batch-size.yml
+++ b/changelog/3.7.0/kong/otel-increase-queue-max-batch-size.yml
@@ -1,3 +1,3 @@
-message: "**Opentelemetry**: increase queue max batch size to 200"
+message: "**Opentelemetry**: Increased queue max batch size to 200."
 type: performance
 scope: Plugin
