--- a/changelog/3.7.0/kong/otel-sampling-panic-when-header-trace-id-enable.yml
+++ b/changelog/3.7.0/kong/otel-sampling-panic-when-header-trace-id-enable.yml
@@ -1,3 +1,3 @@
-message: "**Opentelemetry**: fix otel sampling mode lua panic bug when http_response_header_for_traceid option enable"
+message: "**Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened when the `http_response_header_for_traceid` option was enabled."
 type: bugfix
 scope: Plugin
