--- a/changelog/3.7.0/kong/propagation-module-rework.yml
+++ b/changelog/3.7.0/kong/propagation-module-rework.yml
@@ -1,5 +1,5 @@
 message: |
-  **OpenTelemetry, Zipkin**: the propagation module has been reworked, new
+  **OpenTelemetry, Zipkin**: The propagation module has been reworked. The new
   options allow better control over the configuration of tracing headers propagation.
 type: feature
 scope: Plugin
