--- a/changelog/3.7.0/kong/update-ai-proxy-telemetry.yml
+++ b/changelog/3.7.0/kong/update-ai-proxy-telemetry.yml
@@ -1,3 +1,3 @@
-message: Update telemetry collection for AI Plugins to allow multiple plugins data to be set for the same request.
+message: Updated telemetry collection for AI Plugins to allow multiple plugins data to be set for the same request.
 type: bugfix
 scope: Core
