--- a/changelog/3.7.0/kong/wasm-bundled-filters.yml
+++ b/changelog/3.7.0/kong/wasm-bundled-filters.yml
@@ -1,3 +1,3 @@
-message: Add `wasm_filters` configuration value for enabling individual filters
+message: Added the `wasm_filters` configuration parameter for enabling individual filters
 type: feature
 scope: Configuration
