--- a/changelog/unreleased/kong/add_tzdata.yml
+++ b/changelog/unreleased/kong/add_tzdata.yml
@@ -1,3 +1,3 @@
 message: |
-  Add package `tzdata` to DEB Docker image for convenient timezone setting. You can now set time zone info using `TZ="Asia/Shanghai"`.
+  Added package `tzdata` to DEB Docker image for convenient timezone setting.
 type: dependency
