docs(changelog): typofix for #13021

--- a/changelog/unreleased/kong/feat-dont-allow-priority-with-others.yml
+++ b/changelog/unreleased/kong/feat-dont-allow-priority-with-others.yml
@@ -1,5 +1,5 @@
 message: |
   Do not allow setting priority field in traditional mode route
-  When 'router_flavor' is configrued as 'expressions'.
+  When 'router_flavor' is configured as 'expressions'.
 type: feature
 scope: Core
