change type from bugfix to breaking_change

--- a/changelog/unreleased/kong/remove_cname_from_dns_order_default_value.yml
+++ b/changelog/unreleased/kong/remove_cname_from_dns_order_default_value.yml
@@ -1,3 +1,3 @@
-message: Removed `CNAME` from the default value of the `dns_order` option
-type: bugfix
+message: Removed `CNAME` from default `dns_order` option
+type: breaking_change
 scope: Configuration
