--- a/changelog/unreleased/kong/fix-route-set-priority-with-others.yml
+++ b/changelog/unreleased/kong/fix-route-set-priority-with-others.yml
@@ -1,5 +1,5 @@
 message: |
-  Fixed an issue where priority field can be set in traditional mode route
+  Fixed an issue where the priority field can be set in a traditional mode route
   When 'router_flavor' is configured as 'expressions'.
 type: bugfix
 scope: Core
