--- a/.github/workflows/cherry-picks.yml
+++ b/.github/workflows/cherry-picks.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   cross-repo-cherrypick:
     name: Cherry pick to remote repository
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     # Only run when pull request is merged, or labeled
     # or when a comment containing `/cherry-pick` is created
     # and the author is a member, collaborator or owner
