--- a/.github/workflows/auto-assignee.yml
+++ b/.github/workflows/auto-assignee.yml
@@ -6,7 +6,7 @@ permissions:
   pull-requests: write
 jobs:
   assign-author:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: assign-author
         # ignore the pull requests opened from PR because token is not correct
