--- a/.github/workflows/backport-fail-bot.yml
+++ b/.github/workflows/backport-fail-bot.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_comment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: github.event.issue.pull_request != null && contains(github.event.comment.body, 'cherry-pick the changes locally and resolve any conflicts')
 
     steps:
