chore(ci): generate the Docker tag latest-ubuntu only for the latest commit on the default branch (#9380)
Cherry-picked from https://github.com/Kong/kong/pull/13096, https://github.com/Kong/kong/pull/13170

KAG-4374

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -769,6 +769,13 @@ jobs:
         username: ${{ secrets.GHA_DOCKERHUB_PUSH_USER }}
         password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PUSH_TOKEN }}
 
+    - uses: actions/checkout@v3
+
+    - name: Get latest commit SHA on master
+      run: |
+        echo "latest_sha=$(git ls-remote origin -h refs/heads/${{ github.event.inputs.default_branch }} | cut -f1)" >> $GITHUB_ENV
+
+          type=raw,${{ needs.metadata.outputs.commit-sha }}-${{ matrix.label }}
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v5
@@ -787,8 +794,8 @@ jobs:
         # 20230228, 20230228-{distro}  (input.version is "nightly")
         # {version}-20230228, {version}-20230228-{distro}  (input.version is set and not on master)
         tags: |
-          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == 'master' }}
-          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == 'master' }},suffix=
+          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == github.event.inputs.default_branch && env.latest_sha == needs.metadata.outputs.commit-sha }}
+          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == github.event.inputs.default_branch && env.latest_sha == needs.metadata.outputs.commit-sha }},suffix=
           type=match,enable=${{ github.event_name == 'workflow_dispatch' && github.event.inputs.official  == 'true' }},pattern=\d.\d,value=${{ github.event.inputs.version }}
           type=match,enable=${{ github.event_name == 'workflow_dispatch' && matrix.label == 'ubuntu' && github.event.inputs.official  == 'true' }},pattern=\d.\d,value=${{ github.event.inputs.version }},suffix=
           type=raw,enable=${{ github.event_name == 'workflow_dispatch' }},${{ github.event.inputs.version }}
