--- a/.github/matrix-full.yml
+++ b/.github/matrix-full.yml
@@ -18,14 +18,16 @@ build-packages:
   bazel-args: --//:fips=true
   check-manifest-suite: ubuntu-20.04-amd64-fips
 - label: ubuntu-22.04
+  image: ubuntu:22.04
   package: deb
   check-manifest-suite: ubuntu-22.04-amd64
 - label: ubuntu-22.04-arm64
+  image: ubuntu:22.04
   package: deb
   bazel-args: --platforms=//:generic-crossbuild-aarch64
   check-manifest-suite: ubuntu-22.04-arm64
 - label: ubuntu-22.04-fips
-  os: vars.RELEASE_RUNS_ON
+  image: ubuntu:22.04
   package: deb
   bazel-args: --//:fips=true
   check-manifest-suite: ubuntu-22.04-amd64-fips
