--- a/changelog/unreleased/kong/bump-ngx-wasm-module.yml
+++ b/changelog/unreleased/kong/bump-ngx-wasm-module.yml
@@ -1,2 +1,2 @@
-message: "Bump `ngx_wasm_module` to `ae7b61150de7c14eb901307daed403b67f29e962`"
+message: "Bumped `ngx_wasm_module` to `ae7b61150de7c14eb901307daed403b67f29e962`"
 type: dependency
